Fix clock countdown

--- a/client/templates/write.html
+++ b/client/templates/write.html
@@ -1,6 +1,6 @@
 <template name="write">
   <div class="wbu-story">
-    <span class="wbu-story__timeleft">{{timeleft}}</span>
+    <span class="wbu-story__clock">{{clock}}</span>
     {{#each sentences}}
       {{> sentence}}
     {{/each}}
