--- a/client/styles/story.sass
+++ b/client/styles/story.sass
@@ -4,14 +4,14 @@ $wbu-color-pending: #FFEB3B
   background: #E8EAF6
   overflow: auto
 
-  &__timeleft
+  &__clock
     color: white
     font-size: 1.5em
     position: absolute
     top: 0.4em
     left: 0
-    width: 100%
-    text-align: center
+    right: 0
+    margin: 0 50%
 
   .sentence
     margin: 0
