--- a/client/styles/stories.sass
+++ b/client/styles/stories.sass
@@ -1,5 +1,15 @@
 $wbu-color-stories: #03A9F4
 
+.wbu-introduction
+  background: #D81B60
+  color: white
+  padding: 2em 1em
+
+  p
+    margin: 0
+  ol
+    margin: 0
+
 .wbu-stories
   margin: 0
   padding: 0
@@ -8,10 +18,10 @@ $wbu-color-stories: #03A9F4
   li
     list-style: none
     position: relative
-    box-shadow: inset rgba(0, 0, 0, 0.20) 0px 2px 5px
+    box-shadow: inset rgba(0, 0, 0, 0.30) 0px 2px 5px
 
     &:last-of-type
-      box-shadow: inset rgba(0, 0, 0, 0.20) 0px 2px 5px, rgba(0, 0, 0, 0.50) 0px 2px 5px
+      box-shadow: inset rgba(0, 0, 0, 0.30) 0px 2px 5px, rgba(0, 0, 0, 0.50) 0px 2px 5px
 
     &:nth-of-type(3n + 1)
       background: darken($wbu-color-stories, 10%)
