Hide entry form on closed stories

--- a/client/templates/write.html
+++ b/client/templates/write.html
@@ -6,7 +6,9 @@
     {{/each}}
   </div>
   {{#if currentUser}}
-    {{> enterSentence}}
+    {{#if clock}}
+      {{> enterSentence}}
+    {{/if}}
   {{/if}}
 </template>
 
