--- a/client/templates/story-list.html
+++ b/client/templates/story-list.html
@@ -3,6 +3,7 @@
     <p>Write By Us is a collaborative writing game.</p>
     <h3>How it works:</h3>
     <ol>
+      <li>Create an an account or sign in.</li>
       <li>Join an existing Story or start your own!</li>
       <li>Submit your idea for the story's next sentence.</li>
       <li>Vote for your favorite submissions.</li>
