Better placement of author name

--- a/client/styles/story.sass
+++ b/client/styles/story.sass
@@ -19,7 +19,10 @@ $wbu-color-pending: #FFEB3B
     padding: 0.5em
 
     &__author
+      color: rgba(0, 0, 0, 0.5)
+      font-size: 0.8em
       float: right
+      padding: 1em 0 0.75em 0
 
     &--pending
       background: lighten($wbu-color-pending, 20%)
@@ -29,4 +32,3 @@ $wbu-color-pending: #FFEB3B
 
     &--accepted
       background: none
-
